fixed the horizontal scrollbar issue of the body

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,6 +15,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background: #f4f4f4;
+  overflow: hidden;
 }
 
 #main-header {
